#10875 [화면구조 리팩토링] 화면 상단 구현 1. 피드백 수정

--- a/src/main/resources/public/scss/theme/default/_top.scss
+++ b/src/main/resources/public/scss/theme/default/_top.scss
@@ -71,7 +71,7 @@
         &.active {
             background-color: $top-menu-user-selected-bg-color;
             border-color: $top-menu-user-selected-border-color;
-            + .z-dropdown-content {
+            + .#{$common-prefix}dropdown-content {
                 visibility: visible;
             }
             .i-arrow-right {
