--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -771,10 +771,10 @@ input, button, select, optgroup, textarea {
   display: flex;
   align-items: center;
   height: 3.125rem;
-  font-size: 1rem;
+  font-size: 1.125rem;
   font-weight: 500;
   color: #FFFFFF;
-  background-color: #0098FF;
+  background-color: #339AF0;
   padding: 0 1.25rem;
   z-index: 100;
 }
