--- a/src/main/resources/public/scss/formDesigner/_layout.scss
+++ b/src/main/resources/public/scss/formDesigner/_layout.scss
@@ -15,21 +15,41 @@
   }
   &-header {
     @include fixedHeader;
+    height: $layout-header-height;
+    font-family: $layout-header-font-family;
     font-size: $layout-header-font-size;
     font-weight: $layout-header-font-weight;
     color: $layout-header-font-color;
     background-color: $layout-header-bg-color;
     z-index: $z-index-gnb;
-    .logo {
+    .#{$common-prefix}logo {
       width: 12.5rem; // 200px
       padding: 0 $layout-header-padding; // 0 12px
     }
-    .name {
+    .#{$common-prefix}form-name {
       font-size: $layout-header-font-size;
     }
-    .buttons {
-      width: 20rem; // 320px
-      padding: 0 $layout-header-padding; // 0 12px
+    .#{$common-prefix}form-button-list {
+      width: 19.06rem; // 305px
+
+      .#{$common-prefix}header-dropdown {
+        width: 1.25rem; // 20px
+        padding: 0;
+
+        .#{$common-prefix}icon {
+          margin: -0.1875rem; // -3px
+        }
+
+        /*&.hover {
+          > .dropdown-content {
+            visibility: visible;
+            display: block;
+          }
+          &:last-child > .dropdown-content {
+            right: $layout-header-padding; // 12px
+          }
+        }*/
+      }
       .dropdown {
         &-content {
           visibility: hidden;
@@ -45,15 +65,6 @@
         &-item {
           padding: 0.6875rem 0.875rem; // 11px 14px
           &:hover { background-color: $layout-header-dropdown-hover-bg-color; }
-        }
-      }
-      .btn-dropdown:hover {
-        > .dropdown-content {
-          visibility: visible;
-          display: block;
-        }
-        &:last-child > .dropdown-content {
-          right: $layout-header-padding; // 12px
         }
       }
     }
