누락된 select 디자인 적용

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -76,6 +76,7 @@ input, button, select, optgroup, textarea {
   font-size: 100%;
   line-height: 1.2;
   margin: 0;
+  max-width: 100%;
 }
 
 /* _alignments.scss 
