--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -279,6 +279,7 @@
                             editTags: false,
                             placeholder: i18n.msg('token.msg.tag')
                         });
+                        aliceJs.initDesignedSelectTag(document.querySelector('.chart-edit-modal'));
                     } else if (target === 'view') {
                         setChart(chartType);
                     }
