--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -415,6 +415,7 @@
             divRow.appendChild(divCodeLangValueInput);
             divRow.appendChild(divDeleteBtn);
             document.getElementById('codeLang').appendChild(divRow);
+            aliceJs.initDesignedSelectTag(document.querySelector('#codeLang'));
         }
 
         function initCodeLang(param) {
