--- a/src/main/resources/public/template/custom-code/customCodeEdit.html
+++ b/src/main/resources/public/template/custom-code/customCodeEdit.html
@@ -270,6 +270,7 @@
             divRow.appendChild(valueInput);
             divRow.appendChild(deleteBtn);
             document.getElementById('condition').appendChild(divRow);
+            aliceJs.initDesignedSelectTag(document.querySelector('#condition'));
         }
 
         //Change Container
