--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -257,6 +257,8 @@
                                 inheritedAttrs: "class"
                             }
                         });
+
+                        aliceJs.initDesignedSelectTag();
                     }
                 }
                 // 수정일 경우 신청서 양식 편집 버튼 추가
