--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -77,6 +77,7 @@ input, button, select, optgroup, textarea {
   font-size: 100%;
   line-height: 1.2;
   margin: 0;
+  max-width: 100%;
 }
 
 /* _alignments.scss 
