--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -77,6 +77,7 @@ input, button, select, optgroup, textarea {
   font-size: 100%;
   line-height: 1.2;
   margin: 0;
+  max-width: 100%;
 }
 
 /* _alignments.scss 
@@ -2136,10 +2137,6 @@ label {
   border-radius: 0.125rem;
   -webkit-border-radius: 0.125rem;
   -moz-border-radius: 0.125rem;
-}
-
-select {
-  vertical-align: middle;
 }
 
 label {
